adding javascript to index file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         <ul>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
-        </ul>
+          <li>HTML is used to create the overall structure of a webpage</li>
+          <li>The head element can not be seen by the user</li>
+          <li>The body element is what is shown to the user</li>
+          <li>Elements are always composed of opening and closing tags</li>
+          <li>Metadata tells the browser how to render the page</li>
+          <li>Metadata includes things like charachter set, keywords, author, viewport and many others</li>
+          </ul>
 
       </section>
    
@@ -40,6 +46,12 @@
      <ul>
        <li>git status: checks what branch we are currently on</li>
        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+       <li>CLI stands for command line interface and I use gitbash for this</li>
+       <li>git pull orgin main is the way to make sure you are in sync between local environment and github</li>
+       <li>git commit -m "______" will allow you to leave a message in code</li>
+       <li>git -b will create a new branch</li>
+       <li>git push orgin pushes work from local environment to github</li>
+       <li>IDE stands for integrated development environment which is a workspace developers use to code for example VS Code</li>
      </ul>
    </section>
    
@@ -48,7 +60,23 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
      <ul>
-       <li>Enter your JavaScript notes here</li>
+       <li>A variable is a named container that allows us to store data in our code.</li>
+       <li>Control flow is the order in which a computer executes code in a script.</li>
+       <li>JavaScript is used to add interactivity to a website</li>
+       <li>Tools for Java include browser applicatons, 3rd party APIs and 3rd party frameworks and libraries</li>
+       <li>Java is a dynamic and weakly typed language</li>
+       <li>Primitive values define immutable values at the lowest level of the language.  Examples are Boolean, Number, String, Symbol, etc.</li>
+       <li>Stings are always surrounded by quotation marks</li>
+       <li>Java will go in the body element of HTML</li>
+       <li>The end of each line will always get a semi-colon</li>
+       <li>An array is a group of related data stored in a single variable</li>
+       <li>Index is a unique number of where one particular thing is in an array</li>
+       <li>When counting in Java it is important to always start with zero, not one</li>
+       <li>A for loop uses predicatable pattern of indexes to perform a task over and over with less coding</li>
+       <li>A for loop must have 3 things, a starting point of the loop, a condition and code that allows the array to iterate over each item in the indexes</li>
+       <li>Function is a set of instructions that tell a computer what to do</li>
+       <li>Functions do not automatically occur, you have to call it by name to execute</li>
+       <li>A function is always followed by ()</li>
      </ul>
    
       </section>
